# flan

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml  clang-format.yml  cmake.yml
app/: CMakeLists.txt  flan.qrc  main.cpp
include/flan/: color_button.hpp  curve_data_parser.hpp  data_source.hpp  data_source_delegate.hpp  data_source_delegate_provider.hpp  data_source_delegate_provider_scratch_buffer.hpp  data_source_delegate_provider_serial_port.hpp  data_source_delegate_provider_stdin.hpp  data_source_delegate_scratch_buffer.hpp  data_source_delegate_serial_port.hpp  data_source_delegate_stdin.hpp  data_source_provider_serial_port.hpp  data_source_scratch_buffer.hpp  data_source_scratch_buffer_delegate.hpp  data_source_selection_widget.hpp  data_source_serial_port.hpp  data_source_serial_port_delegate.hpp  data_source_stdin.hpp  data_source_stdin_delegate.hpp  elided_label.hpp  find_controller.hpp  find_widget.hpp  log_margin_area_widget.hpp  log_widget.hpp  main_widget.hpp  matching_rule.hpp  pcre_cheatsheet_dialog.hpp  plot.hpp  rule_editor.hpp  rule_highlighter.hpp  rule_model.hpp  rule_set.hpp  rule_tree_view.hpp  rule_tree_widget.hpp  settings.hpp  style.hpp  style_button.hpp  style_editor_dialog.hpp  style_list_widget.hpp  styled_matching_rule.hpp  (+4 more)
libs/: CMakeLists.txt
libs/qwt/: CMakeLists.txt
src/: color_button.cpp  curve_data_parser.cpp  data_source.cpp  data_source_delegate.cpp  data_source_delegate_provider.cpp  data_source_delegate_provider_scratch_buffer.cpp  data_source_delegate_provider_serial_port.cpp  data_source_delegate_provider_stdin.cpp  data_source_delegate_scratch_buffer.cpp  data_source_delegate_serial_port.cpp  data_source_delegate_stdin.cpp  data_source_provider_serial_port.cpp  data_source_scratch_buffer.cpp  data_source_scratch_buffer_delegate.cpp  data_source_selection_widget.cpp  data_source_serial_port.cpp  data_source_serial_port_delegate.cpp  data_source_stdin.cpp  data_source_stdin_delegate.cpp  elided_label.cpp  find_controller.cpp  find_widget.cpp  libflan.qrc  log_margin_area_widget.cpp  log_widget.cpp  main_widget.cpp  pcre_cheatsheet_dialog.cpp  plot.cpp  rule_editor.cpp  rule_highlighter.cpp  rule_model.cpp  rule_set.cpp  rule_tree_view.cpp  rule_tree_widget.cpp  settings.cpp  stdin_socket_notifier.cpp  stdin_socket_notifier.hpp  style.cpp  style_button.cpp  style_editor_dialog.cpp  (+4 more)
src/assets/: pcre_cheatsheet.html
